# FoodSight

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
Food_leftover_dataset/: README.md  food_categories.txt
Food_leftover_dataset_1/tray1/: food_image.jpg.csv  food_image.jpg_0.csv  food_image.jpg_1.csv  leftover1.jpg.csv  leftover1.jpg_0.csv  leftover1.jpg_1.csv  leftover2.jpg.csv  leftover2.jpg_0.csv  leftover2.jpg_1.csv  leftover3.jpg.csv  leftover3.jpg_0.csv  leftover3.jpg_1.csv
Food_leftover_dataset_1/tray2/: food_image.jpg.csv  food_image.jpg_0.csv  food_image.jpg_1.csv  food_image.jpg_2.csv  leftover1.jpg.csv  leftover1.jpg_0.csv  leftover1.jpg_1.csv  leftover1.jpg_2.csv  leftover2.jpg.csv  leftover2.jpg_0.csv  leftover2.jpg_1.csv  leftover2.jpg_2.csv  leftover3.jpg.csv  leftover3.jpg_0.csv  leftover3.jpg_1.csv  leftover3.jpg_2.csv
Food_leftover_dataset_1/tray3/: food_image.jpg.csv  food_image.jpg_0.csv  food_image.jpg_1.csv  leftover1.jpg.csv  leftover1.jpg_0.csv  leftover1.jpg_1.csv  leftover1.jpg_2.csv  leftover2.jpg.csv  leftover2.jpg_0.csv  (+6 more)
keypoints_by_food_type/: Basil Potatoes.xml  Basil Potatoes_1.xml  Beans.xml  Beans_1.xml  Beans_2.xml  Bread_1.xml  Bread_2.xml  Fish Cutlet.xml  Fish Cutlet_1.xml  Grilled Pork Cutlet.xml  Grilled Pork Cutlet_1.xml  Pasta Pesto.xml  Pasta With Clams and Mussels.xml  Pasta With Meat Sauce.xml  Pasta With Tomato Sauce.xml  Pilaw Rice With Peppers And Peas.xml  Rabit.xml  Rabit_1.xml  Salad.xml  Salad_1.xml  Salad_2.xml  Seafood Salad.xml  bread.xml
src/: main.cpp
(+104 files in other folders)
